# LLM

./: .env  10.py  7.cpp  8.java  9.java  HOW_TO_TEST_GUIDE.md  LINKEDIN_CAPTION.md  NLP_API.py  NLP_DUAL_API.py  OLLAMA_FIXES_DOCUMENTATION.md  RAG.py  RAG1.py  README.md  admin_app_fileupdater.py  app.py  app_RAG.py  app_api.py  chatbot.py  convert_to_doc1_format.py  converted_doc1.txt  doc1.json  document_processor.py  download_instructions.txt  fileupdater.py  greeting_handler.py  hybrid_search.py  index.js  key.txt  llm_handler.py  main.py  main_chatbot.py  main_chatbot_weaviate.py  mp3.py  perplex_app.py  pyproject.toml  rag_engine.py  rag_search.py  replit.md  req.txt  requirements.txt  (+10 more)
data/: doc1.json
docs/: sfa_faq.txt  support_docs.json
uploaded_files/: MLMLML.json  doc1.json  mlinterview.json
utils/: __init__.py  device_detector.py  document_processor.py  hybrid_search.py  llm_handler.py  query_processor.py
