[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "chromadb>=0.6.3",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "fitz>=0.0.1.dev2",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-ollama>=0.3.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]
